@@ -1,3 +1,8 @@
+2006-02-28  Daniel Stone  <daniel@freedesktop.org>
+
+	* xkb/maprules.c:
+	Bug #5216: Allow options to appear with other components.
+
 2006-02-28  Adam Jackson  <ajax@freedesktop.org>
 
 	* XpConfig/C/print/models/CANONC3200-PS/fonts/Makefile.am:
